# seash

./: .gitignore  CMakeLists.txt  Pipfile
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cc
src/ast/: CMakeLists.txt  ast.cc  ast.hh  pipeline.cc  pipeline.hh  simple_cmd.cc  simple_cmd.hh
src/builtins/: CMakeLists.txt  builtins.cc  builtins.hh  echo.cc  echo.hh
src/lexer/: CMakeLists.txt  lexer.cc  lexer.hh
src/parser/: CMakeLists.txt  parser.cc  parser.hh
src/token/: CMakeLists.txt  token.cc  token.hh  word.cc  word.hh
src/visitor/: CMakeLists.txt  execution_visitor.cc  execution_visitor.hh  print_visitor.cc  print_visitor.hh  visitor.cc  visitor.hh
tests/: config.py  test_builtins.py  test_options.py  test_parser.py  test_simple_cmd.py  utils.py
tests/parser/: simple_cmd_eof_delimiter.sh
